--- a/app/package.json
+++ b/app/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.210",
+    "pigeon-maps": "^0.21.3",
     "ts-loader": "^9.4.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
