--- a/app/public/manifest.json
+++ b/app/public/manifest.json
@@ -6,6 +6,7 @@
         "default_popup": "index.html",
         "default_title": "Open the popup"
     },
+    "permissions": ["geolocation"],
     "content_scripts": [
         {
           "matches": ["<all_urls>"],
