--- a/app/package.json
+++ b/app/package.json
@@ -45,6 +45,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.8",
     "@types/chrome": "^0.0.210",
+    "axios": "^1.3.2",
     "pigeon-maps": "^0.21.3",
     "ts-loader": "^9.4.2",
     "webpack": "^5.75.0",
